--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <body>
  <h2>Spot the difference impossible level!</h2>
 <img src="https://cdn.discordapp.com/emojis/707954760195506217.png?v=1" alt="Trulli" width="500" height="333">
+  <img src="https://cdn.discordapp.com/emojis/707954733649887252.png?v=1" alt="Trulli" width="500" height="333">
  </body>
 
 </html>
